# my-cpp-handbook

./: .gitignore  README.md  index.md  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: book.yml
.vitepress/: config.mts
docs/: index.md
docs/.vitepress/: config.mts
docs/exercises/0008-modularity/: .gitignore  CMakeLists.txt  README.md
docs/exercises/0008-modularity/01-distinct-files/: complex-op.h  main.cc
docs/exercises/0008-modularity/02-namespaces/: complex-op.hh
docs/exercises/0008-modularity/03-modules/: main.cc
exercises/0001-hello-world/: README.md  hello-modern  index.md  main.cc
exercises/0002-basic-input/: .gitignore  README.md  index.md  input-arguments.cc  input-environment.cc
exercises/0003-primitive-types/: .gitignore  README.md  index.md  sample-types.cc
exercises/0004-control-structures/: README.md  control-flow.cc  index.md
exercises/0005-functions/: .gitignore  Makefile  README.md  exemplo-01.cc  exemplo-03.cc  index.md
exercises/0006-pointers/: .gitignore  Makefile  README.md  index.md  pointer-01.cc  pointer-02.cc  pointer-03.cc  pointer-04.cc  pointer-05.cc
exercises/0007-basic-file-io/: .gitignore  01-file-read.cc  02-file-read.cc  04-file-write  04-file-write.cc  05-custom-read-write.cc  CMakeLists.txt  README.MD  README.md  index.md  some-words.txt
exercises/0008-modularity/: .gitignore  CMakeLists.txt  README.md  index.md
exercises/0009-classes/: index.md
exercises/0010-functions-lambdas/: function-typedef.cc  index.md  main  main.cc  pointer-to-function.cc  sample-lambda.cpp  (+1 more)
(+23 files in other folders)
